--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/pubu/pubu",
-    "pages/index/index"
+    "pages/index/index",
+    "pages/pubu/pubu"
+  
    
   ],
   "window": {
